# chembl-pdb-linker

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  publish.yml
config/: default.yaml
paper/: .gitignore  chembl_pdb_linker.tex  graphical_abstract.tex  references.bib
scripts/: run_pipeline.py  validate_output.py
src/chembl_pdb_linker/: __init__.py  cli.py  config.py  pipeline.py
src/chembl_pdb_linker/downloaders/: __init__.py  chembl.py  pdb.py
src/chembl_pdb_linker/extractors/: __init__.py  bioactivity.py  structure.py
src/chembl_pdb_linker/linkers/: __init__.py  ligand.py  uniprot.py
tests/: __init__.py  conftest.py
tests/integration/: test_cli.py  test_pipeline.py
tests/unit/: test_config.py
tests/unit/test_extractors/: test_bioactivity_extractor.py  test_structure_extractor.py
tests/unit/test_linkers/: __init__.py  test_ligand_linker.py  test_uniprot_linker.py
