[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chembl-pdb-linker"
version = "0.1.0"
description = "Link ChEMBL bioactivity data with PDB structural information"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
keywords = ["chembl", "pdb", "bioactivity", "drug-discovery", "cheminformatics"]

dependencies = [
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "typer>=0.9.0",
    "tqdm>=4.66.0",
    "rdkit>=2023.9.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
chembl-pdb-linker = "chembl_pdb_linker.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/chembl-pdb-linker"
Repository = "https://github.com/yourusername/chembl-pdb-linker"

[tool.hatch.build.targets.wheel]
packages = ["src/chembl_pdb_linker"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
